--- a/registration.html
+++ b/registration.html
@@ -41,7 +41,7 @@
                         <input id="menu-switch" type="checkbox">
                         <ul class="menu-list">
                             <a href="#" class="menu-list-close-btn"></a>
-                            <span class="menu-list-title">menu</span>
+                            <p class="menu-list-title">menu</p>
                             <li class="menu-list-item">
                                 <a href="#">man</a>
                                 <ul class="menu-sublist">
@@ -126,89 +126,55 @@
         </header>
         <main>
             <section class="new_arrivals new_arrivals_marg container shoping_cart">
-                <header class="new_arrivals_header">SHOPPING CART</header>
+                <header class="new_arrivals_header">REGISTRATION</header>
                 <div></div>
             </section>
-            <section class="cart_box">
-                <div class="left_cart">
-                    <div class="cart_item">
-                        <img class="cart_img" src="./img/product_photo3.png" alt="photo" width="262">
-                        <div class="cart_item_text_box">
-                            <h3 class="text_mango_">MANGO PEOPLE</h3>
-                            <h3 class="text_mango">T-SHIRT</h3>
-                            <p class="text_price">Price: <span class="text_price_red">$300</span></p>
-                            <p class="text_price">Color: Red</p>
-                            <p class="text_price">Size: Xl</p>
-                            <div class="quantity">
-                                <p class="text_price">Quantity:</p>
-                                <p class="text_price_border">2</p>
-                                <div class="cross">
-
-                                    <svg width="18" height="18" viewBox="0 0 18 18" fill="none"
-                                        xmlns="http://www.w3.org/2000/svg">
-                                        <path
-                                            d="M11.2453 9L17.5302 2.71516C17.8285 2.41741 17.9962 2.01336 17.9966 1.59191C17.997 1.17045 17.8299 0.76611 17.5322 0.467833C17.2344 0.169555 16.8304 0.00177586 16.4089 0.00140366C15.9875 0.00103146 15.5831 0.168097 15.2848 0.465848L9 6.75069L2.71516 0.465848C2.41688 0.167571 2.01233 0 1.5905 0C1.16868 0 0.764125 0.167571 0.465848 0.465848C0.167571 0.764125 0 1.16868 0 1.5905C0 2.01233 0.167571 2.41688 0.465848 2.71516L6.75069 9L0.465848 15.2848C0.167571 15.5831 0 15.9877 0 16.4095C0 16.8313 0.167571 17.2359 0.465848 17.5342C0.764125 17.8324 1.16868 18 1.5905 18C2.01233 18 2.41688 17.8324 2.71516 17.5342L9 11.2493L15.2848 17.5342C15.5831 17.8324 15.9877 18 16.4095 18C16.8313 18 17.2359 17.8324 17.5342 17.5342C17.8324 17.2359 18 16.8313 18 16.4095C18 15.9877 17.8324 15.5831 17.5342 15.2848L11.2453 9Z"
-                                            fill="#575757" />
-                                    </svg>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="cart_item">
-                        <img class="cart_img" src="./img/product_photo7.png" alt="photo" width="262">
-                        <div class="cart_item_text_box">
-                            <h3 class="text_mango_">MANGO PEOPLE</h3>
-                            <h3 class="text_mango">T-SHIRT</h3>
-                            <p class="text_price">Price: <span class="text_price_red">$300</span></p>
-                            <p class="text_price">Color: Red</p>
-                            <p class="text_price">Size: Xl</p>
-                            <div class="quantity">
-                                <p class="text_price">Quantity:</p>
-                                <p class="text_price_border">2</p>
-                                <div class="cross">
-
-                                    <svg width="18" height="18" viewBox="0 0 18 18" fill="none"
-                                        xmlns="http://www.w3.org/2000/svg">
-                                        <path
-                                            d="M11.2453 9L17.5302 2.71516C17.8285 2.41741 17.9962 2.01336 17.9966 1.59191C17.997 1.17045 17.8299 0.76611 17.5322 0.467833C17.2344 0.169555 16.8304 0.00177586 16.4089 0.00140366C15.9875 0.00103146 15.5831 0.168097 15.2848 0.465848L9 6.75069L2.71516 0.465848C2.41688 0.167571 2.01233 0 1.5905 0C1.16868 0 0.764125 0.167571 0.465848 0.465848C0.167571 0.764125 0 1.16868 0 1.5905C0 2.01233 0.167571 2.41688 0.465848 2.71516L6.75069 9L0.465848 15.2848C0.167571 15.5831 0 15.9877 0 16.4095C0 16.8313 0.167571 17.2359 0.465848 17.5342C0.764125 17.8324 1.16868 18 1.5905 18C2.01233 18 2.41688 17.8324 2.71516 17.5342L9 11.2493L15.2848 17.5342C15.5831 17.8324 15.9877 18 16.4095 18C16.8313 18 17.2359 17.8324 17.5342 17.5342C17.8324 17.2359 18 16.8313 18 16.4095C18 15.9877 17.8324 15.5831 17.5342 15.2848L11.2453 9Z"
-                                            fill="#575757" />
-                                    </svg>
-                                </div>
-                            </div>
-                        </div>
-                        <button class="btn_cart_margin">
-
-                            CLEAR SHOPPING CART
-
-                        </button>
-                        <button class="btn_cart_margin">
-
-                            CONTINUE SHOPPING
+            <section class="registration">
+                <form class="registration_forms">
+                    <p class="registration_name">Your Name</p>
+                    <div>
+                        <input class="input_registration" type="text" placeholder="First Name">
+                        <input class="input_registration" type="text" placeholder="Last Name">
+                        <label class="lll"><input class="radio" type="radio" id="gender_male" name="gender"
+                                value="gender" checked> Male</label>
+                        <label><input class="radio" type="radio" id="gender_female" name="gender" value="gender">
+                            Female</label>
+                        <p class="registration_name">Login details</p>
+                        <input class="input_registration" type="email" placeholder="Email" pattern="\S+@[a-z]+.[a-z]+">
+                        <input class="input_registration" type="password" placeholder="Password">
+                        <p class="registration_text_bottom">Please use 8&nbsp;or more characters, with at&nbsp;least
+                            1&nbsp;number and a&nbsp;mixture of&nbsp;uppercase and lowercase letters</p>
+                        <button class="join_btn">join now
+                            <svg width="17" height="10" viewBox="0 0 17 10" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M11.54 0.208095C11.6058 0.142131 11.684 0.0897967 11.77 0.0540883C11.8561 0.01838 11.9483 0 12.0415 0C12.1347 0 12.2269 0.01838 12.313 0.0540883C12.399 0.0897967 12.4772 0.142131 12.543 0.208095L16.7929 4.458C16.8589 4.5238 16.9112 4.60196 16.9469 4.68802C16.9826 4.77407 17.001 4.86632 17.001 4.95949C17.001 5.05266 16.9826 5.14491 16.9469 5.23097C16.9112 5.31702 16.8589 5.39518 16.7929 5.46098L12.543 9.71089C12.41 9.84389 12.2296 9.91861 12.0415 9.91861C11.8534 9.91861 11.673 9.84389 11.54 9.71089C11.407 9.57788 11.3323 9.39749 11.3323 9.2094C11.3323 9.0213 11.407 8.84091 11.54 8.70791L15.2898 4.95949L11.54 1.21107C11.474 1.14528 11.4217 1.06711 11.386 0.981059C11.3503 0.895005 11.3319 0.802752 11.3319 0.709584C11.3319 0.616415 11.3503 0.524162 11.386 0.438109C11.4217 0.352055 11.474 0.273891 11.54 0.208095Z" />
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M0 4.95948C0 4.77162 0.0746263 4.59146 0.207462 4.45862C0.340297 4.32579 0.52046 4.25116 0.708318 4.25116H15.583C15.7708 4.25116 15.951 4.32579 16.0838 4.45862C16.2167 4.59146 16.2913 4.77162 16.2913 4.95948C16.2913 5.14734 16.2167 5.3275 16.0838 5.46033C15.951 5.59317 15.7708 5.6678 15.583 5.6678H0.708318C0.52046 5.6678 0.340297 5.59317 0.207462 5.46033C0.0746263 5.3275 0 5.14734 0 4.95948Z" />
+                            </svg>
 
                         </button>
                     </div>
+
+                </form>
+
+                <div class="registration_text">
+                    <header class="reg_text_header">LOYALTY HAS ITS PERKS</header>
+                    <p class="reg_text_header">Get in&nbsp;on&nbsp;the loyalty program where you can earn points and
+                        unlock serious perks.
+                        Starting with these as&nbsp;soon as&nbsp;you join:</p>
+                    <ul class="reg_text_header_list">
+                        <li class="list_margin"><i class="fa fa-check" aria-hidden="true"></i>15% off welcome offer</li>
+                        <li class="list_margin"><i class="fa fa-check" aria-hidden="true"></i>Free shipping, returns and
+                            exchanges on&nbsp;all orders</li>
+                        <li class="list_margin"><i class="fa fa-check" aria-hidden="true"></i>$10 off a&nbsp;purchase
+                            on&nbsp;your birthday</li>
+                        <li class="list_margin"><i class="fa fa-check" aria-hidden="true"></i>Early access
+                            to&nbsp;products</li>
+                        <li class="list_margin"><i class="fa fa-check" aria-hidden="true"></i>Exclusive offers
+                            &amp;&nbsp;rewards</li>
+                    </ul>
                 </div>
-                <div class="right_cart">
-                    <header class="shoppin_adress">SHIPPING ADRESS</header>
-                    <input class="input_text_cart" type="text" placeholder="Bangladesh">
-                    <input class="input_text_cart" type="text" placeholder="State">
-                    <input class="input_text_cart" type="text" placeholder="Postcode / Zip">
-                    <button class="quote_btn">get a&nbsp;quote</button>
-                    <div class="total">
-                        <div class="total_wrp">
-                            <div class="sub_total">
-                                <p class="text_sub_total">sub total</p>
-                                <p class="text_sub_total">$900</p>
-                            </div>
-                            <div class="grand_total">
-                                <p class="text_grand_total">grand total</p>
-                                <p class="text_grand_total_price">$900</p>
-                            </div>
-                        </div>
-                        <button class="quote_btn_proceed">PROCEED TO&nbsp;CHECKOUT</button>
-                    </div>
-                </div>
+
 
             </section>
         </main>
