--- a/cart.html
+++ b/cart.html
@@ -40,9 +40,12 @@
                         </label>
                         <input id="menu-switch" type="checkbox">
                         <ul class="menu-list">
-                            <a href="#" class="menu-list-close-btn"></a>
-                            <span class="menu-list-title">menu</span>
+
+
                             <li class="menu-list-item">
+
+                                <span class="menu-list-title">menu</span>
+                                <a href="#" class="menu-list-close-btn"></a>
                                 <a href="#">man</a>
                                 <ul class="menu-sublist">
                                     <li class="menu-sublist-item">
@@ -125,14 +128,18 @@
             </div>
         </header>
         <main>
-            <section class="new_arrivals new_arrivals_marg container shoping_cart">
-                <header class="new_arrivals_header">SHOPPING CART</header>
-                <div></div>
+            <section class="new_arrivals container">
+                <div class="new_arrivals_wrp">
+
+                    <h2 class="new_arrivals_header">SHOPPING CART</h2>
+
+                </div>
+
             </section>
             <section class="cart_box">
                 <div class="left_cart">
                     <div class="cart_item">
-                        <img class="cart_img" src="./img/product_photo3.png" alt="photo" width="262">
+                        <img class="cart_img" src="./img/product_photo3.png" alt="photo" width="262" height="306">
                         <div class="cart_item_text_box">
                             <h3 class="text_mango_">MANGO PEOPLE</h3>
                             <h3 class="text_mango">T-SHIRT</h3>
@@ -141,7 +148,8 @@
                             <p class="text_price">Size: Xl</p>
                             <div class="quantity">
                                 <p class="text_price">Quantity:</p>
-                                <p class="text_price_border">2</p>
+                                <input type="number" class="mango_number">
+
                                 <div class="cross">
 
                                     <svg width="18" height="18" viewBox="0 0 18 18" fill="none"
@@ -156,7 +164,7 @@
                     </div>
 
                     <div class="cart_item">
-                        <img class="cart_img" src="./img/product_photo7.png" alt="photo" width="262">
+                        <img class="cart_img" src="./img/product_photo7.png" alt="photo" width="262" height="306">
                         <div class="cart_item_text_box">
                             <h3 class="text_mango_">MANGO PEOPLE</h3>
                             <h3 class="text_mango">T-SHIRT</h3>
@@ -165,7 +173,7 @@
                             <p class="text_price">Size: Xl</p>
                             <div class="quantity">
                                 <p class="text_price">Quantity:</p>
-                                <p class="text_price_border">2</p>
+                                <input type="number" class="mango_number">
                                 <div class="cross">
 
                                     <svg width="18" height="18" viewBox="0 0 18 18" fill="none"
@@ -177,16 +185,18 @@
                                 </div>
                             </div>
                         </div>
-                        <button class="btn_cart_margin">
+                        <div class="btn_wrp">
+                            <button class="btn_cart_margin">
 
-                            CLEAR SHOPPING CART
+                                CLEAR SHOPPING CART
 
-                        </button>
-                        <button class="btn_cart_margin">
+                            </button>
+                            <button class="btn_cart_margin">
 
-                            CONTINUE SHOPPING
+                                CONTINUE SHOPPING
 
-                        </button>
+                            </button>
+                        </div>
                     </div>
                 </div>
                 <div class="right_cart">
@@ -215,29 +225,37 @@
 
 
         <footer class="footer">
+
             <div class="footer_top">
-                <div class="footer_left">
-                    <img src="img/girl.png" alt="girl">
-                    <p class="footer_text">&laquo;Vestibulum quis porttitor dui! Quisque viverra nunc&nbsp;mi,
-                        <i>a&nbsp;pulvinar purus
-                            condimentum&raquo;</i> </p>
-                </div>
-                <div class="subscribe">
-                    <h3 class="subscribe_text">subscribe</h3>
-                    <p class="subscribe_p"> FOR OUR NEWLETTER AND PROMOTION</p>
-                    <form action="#" class="subscribe_box">
-                        <input type="email" class="email" placeholder="Enter Your Email" pattern="\S+@[a-z]+.[a-z]+">
-                        <input type="submit" class="subscribe_btn" value="Subscribe">
-                    </form>
+                <div class="footer_wrp">
+                    <div class="footer_left">
+                        <img src="img/girl.png" alt="girl" width="96">
+                        <p class="footer_text">&laquo;Vestibulum quis porttitor dui! Quisque viverra nunc&nbsp;mi,
+                            <i>a&nbsp;pulvinar purus
+                                condimentum&raquo;</i> </p>
+                    </div>
+
+                    <div class="subscribe">
+                        <h3 class="subscribe_text">subscribe</h3>
+                        <p class="subscribe_p"> FOR OUR NEWLETTER AND PROMOTION</p>
+                        <form action="#" class="subscribe_box">
+                            <input type="email" class="email" placeholder="Enter Your Email"
+                                pattern="\S+@[a-z]+.[a-z]+">
+                            <input type="submit" class="subscribe_btn" value="Subscribe">
+                        </form>
+                    </div>
                 </div>
             </div>
+
             <div class="footer_bottom">
-                <p class="copy-rigths">&copy;&nbsp;2021 Brand All Rights Reserved.</p>
-                <div class="social_icons">
-                    <a href="#"><i class="fab fa-facebook-square"></i></a>
-                    <a href="#"><i class="fab fa-instagram-square"></i></a>
-                    <a href="#"><i class="fab fa-pinterest-square"></i></a>
-                    <a href="#"><i class="fab fa-twitter-square"></i></a>
+                <div class="footer_wrp">
+                    <p class="copy-rigths">&copy;&nbsp;2021 Brand All Rights Reserved.</p>
+                    <div class="social_icons">
+                        <a href="#"><i class="fab fa-facebook-square"></i></a>
+                        <a href="#"><i class="fab fa-instagram-square"></i></a>
+                        <a href="#"><i class="fab fa-pinterest-square"></i></a>
+                        <a href="#"><i class="fab fa-twitter-square"></i></a>
+                    </div>
                 </div>
             </div>
 
