--- a/registration.html
+++ b/registration.html
@@ -40,9 +40,11 @@
                         </label>
                         <input id="menu-switch" type="checkbox">
                         <ul class="menu-list">
-                            <a href="#" class="menu-list-close-btn"></a>
-                            <p class="menu-list-title">menu</p>
+
+
                             <li class="menu-list-item">
+                                <p class="menu-list-title">menu</p>
+                                <a href="#" class="menu-list-close-btn"></a>
                                 <a href="#">man</a>
                                 <ul class="menu-sublist">
                                     <li class="menu-sublist-item">
@@ -125,9 +127,13 @@
             </div>
         </header>
         <main>
-            <section class="new_arrivals new_arrivals_marg container shoping_cart">
-                <header class="new_arrivals_header">REGISTRATION</header>
-                <div></div>
+            <section class="new_arrivals container">
+                <div class="new_arrivals_wrp">
+
+                    <h2 class="new_arrivals_header">REGISTRATION</h2>
+
+                </div>
+
             </section>
             <section class="registration">
                 <form class="registration_forms">
@@ -181,29 +187,37 @@
 
 
         <footer class="footer">
+
             <div class="footer_top">
-                <div class="footer_left">
-                    <img src="img/girl.png" alt="girl">
-                    <p class="footer_text">&laquo;Vestibulum quis porttitor dui! Quisque viverra nunc&nbsp;mi,
-                        <i>a&nbsp;pulvinar purus
-                            condimentum&raquo;</i> </p>
-                </div>
-                <div class="subscribe">
-                    <h3 class="subscribe_text">subscribe</h3>
-                    <p class="subscribe_p"> FOR OUR NEWLETTER AND PROMOTION</p>
-                    <form action="#" class="subscribe_box">
-                        <input type="email" class="email" placeholder="Enter Your Email" pattern="\S+@[a-z]+.[a-z]+">
-                        <input type="submit" class="subscribe_btn" value="Subscribe">
-                    </form>
+                <div class="footer_wrp">
+                    <div class="footer_left">
+                        <img src="img/girl.png" alt="girl" width="96">
+                        <p class="footer_text">&laquo;Vestibulum quis porttitor dui! Quisque viverra nunc&nbsp;mi,
+                            <i>a&nbsp;pulvinar purus
+                                condimentum&raquo;</i> </p>
+                    </div>
+
+                    <div class="subscribe">
+                        <h3 class="subscribe_text">subscribe</h3>
+                        <p class="subscribe_p"> FOR OUR NEWLETTER AND PROMOTION</p>
+                        <form action="#" class="subscribe_box">
+                            <input type="email" class="email" placeholder="Enter Your Email"
+                                pattern="\S+@[a-z]+.[a-z]+">
+                            <input type="submit" class="subscribe_btn" value="Subscribe">
+                        </form>
+                    </div>
                 </div>
             </div>
+
             <div class="footer_bottom">
-                <p class="copy-rigths">&copy;&nbsp;2021 Brand All Rights Reserved.</p>
-                <div class="social_icons">
-                    <a href="#"><i class="fab fa-facebook-square"></i></a>
-                    <a href="#"><i class="fab fa-instagram-square"></i></a>
-                    <a href="#"><i class="fab fa-pinterest-square"></i></a>
-                    <a href="#"><i class="fab fa-twitter-square"></i></a>
+                <div class="footer_wrp">
+                    <p class="copy-rigths">&copy;&nbsp;2021 Brand All Rights Reserved.</p>
+                    <div class="social_icons">
+                        <a href="#"><i class="fab fa-facebook-square"></i></a>
+                        <a href="#"><i class="fab fa-instagram-square"></i></a>
+                        <a href="#"><i class="fab fa-pinterest-square"></i></a>
+                        <a href="#"><i class="fab fa-twitter-square"></i></a>
+                    </div>
                 </div>
             </div>
 
