--- a/cart.html
+++ b/cart.html
@@ -199,13 +199,15 @@
                         </div>
                     </div>
                 </div>
-                <div class="right_cart">
+                <form action="#" class="right_cart">
+                    <div>
                     <header class="shoppin_adress">SHIPPING ADRESS</header>
                     <input class="input_text_cart" type="text" placeholder="Bangladesh">
                     <input class="input_text_cart" type="text" placeholder="State">
                     <input class="input_text_cart" type="text" placeholder="Postcode / Zip">
-                    <button class="quote_btn">get a&nbsp;quote</button>
-                    <div class="total">
+                       <input class="quote_btn" type="submit" value="get a&nbsp;quote">
+                    </div>
+                                        <div class="total">
                         <div class="total_wrp">
                             <div class="sub_total">
                                 <p class="text_sub_total">sub total</p>
@@ -215,10 +217,12 @@
                                 <p class="text_grand_total">grand total</p>
                                 <p class="text_grand_total_price">$900</p>
                             </div>
+                            <button class="quote_btn_proceed">PROCEED TO&nbsp;CHECKOUT</button>
                         </div>
-                        <button class="quote_btn_proceed">PROCEED TO&nbsp;CHECKOUT</button>
+                     
+                        
                     </div>
-                </div>
+                </form>
 
             </section>
         </main>
@@ -248,7 +252,7 @@
             </div>
 
             <div class="footer_bottom">
-                <div class="footer_wrp">
+                <div class="footer_wrp_bottom">
                     <p class="copy-rigths">&copy;&nbsp;2021 Brand All Rights Reserved.</p>
                     <div class="social_icons">
                         <a href="#"><i class="fab fa-facebook-square"></i></a>
