--- a/catalog.html
+++ b/catalog.html
@@ -150,7 +150,7 @@
                     <div class="filter ">
                         <input type="checkbox" id="switch_filter">
                         <label class="filter_btn" for="switch_filter">
-                            <span>filter</span>
+                            <span></span>
                             <svg width="15" height="10" viewBox="0 0 15 10" xmlns="http://www.w3.org/2000/svg"
                                 class="filter_svg">
                                 <path
@@ -538,7 +538,7 @@
             </div>
 
             <div class="footer_bottom">
-                <div class="footer_bottom_wrp">
+                <div class="footer_wrp_bottom">
                     <p class="copy-rigths">&copy;&nbsp;2021 Brand All Rights Reserved.</p>
                     <div class="social_icons">
                         <a href="#"><i class="fab fa-facebook-square"></i></a>
@@ -553,4 +553,4 @@
     </div>
 </body>
 
-</html>
+</html> 
