--- a/product.html
+++ b/product.html
@@ -239,7 +239,7 @@
                         <span>Add to&nbsp;Cart</span>
                     </button>
                 </div>
-                <div class="products_item">
+                <div class="products_item products_item_prod">
                     <div class="products_item_img">
                         <img src="img/product_photo6.png" alt="product_photo">
                     </div>
@@ -337,7 +337,7 @@
             </div>
 
             <div class="footer_bottom">
-                <div class="footer_wrp">
+                <div class="footer_wrp_bottom">
                     <p class="copy-rigths">&copy;&nbsp;2021 Brand All Rights Reserved.</p>
                     <div class="social_icons">
                         <a href="#"><i class="fab fa-facebook-square"></i></a>
