--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
             </div>
 
             <div class="footer_bottom">
-                <div class="footer_wrp">
+                <div class="footer_wrp_bottom">
                     <p class="copy-rigths">&copy;&nbsp;2021 Brand All Rights Reserved.</p>
                     <div class="social_icons">
                         <a href="#"><i class="fab fa-facebook-square"></i></a>
