--- a/registration.html
+++ b/registration.html
@@ -163,27 +163,36 @@
                         unlock serious perks.
                         Starting with these as&nbsp;soon as&nbsp;you join:</p>
                     <ul class="reg_text_header_list">
-                        <li class="list_margin"><svg class="mar" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
-                            id="mdi-check" width="24" height="24" viewBox="0 0 24 24">
-                            <path d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z" /></svg>15% off welcome offer</li>
-                        
-                        <li class="list_margin"><svg class="mar" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
-                            id="mdi-check" width="24" height="24" viewBox="0 0 24 24">
-                            <path d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z" /></svg>Free shipping, returns and
+                        <li class="list_margin"><svg class="mar" xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="mdi-check" width="24"
+                                height="24" viewBox="0 0 24 24">
+                                <path d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z" /></svg>15% off
+                            welcome offer</li>
+
+                        <li class="list_margin"><svg class="mar" xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="mdi1-check" width="24"
+                                height="24" viewBox="0 0 24 24">
+                                <path d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z" /></svg>Free shipping,
+                            returns and
                             exchanges on&nbsp;all orders</li>
-                            <li class="list_margin"><svg class="mar" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
-                                id="mdi-check" width="24" height="24" viewBox="0 0 24 24">
-                                <path d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z" /></svg>10 off a&nbsp;purchase
-                                on&nbsp;your birthday</li>
-                                <li class="list_margin"><svg class="mar" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
-                                    id="mdi-check" width="24" height="24" viewBox="0 0 24 24">
-                                    <path d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z" /></svg>Early access
-                                    to&nbsp;products</li>
-                                    <li class="list_margin"><svg class="mar" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
-                                        id="mdi-check" width="24" height="24" viewBox="0 0 24 24">
-                                        <path d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z" /></svg>Exclusive offers
-                                        &amp;&nbsp;rewards</li>
-                                          </ul>
+                        <li class="list_margin"><svg class="mar" xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="mdi2-check" width="24"
+                                height="24" viewBox="0 0 24 24">
+                                <path d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z" /></svg>10 off
+                            a&nbsp;purchase
+                            on&nbsp;your birthday</li>
+                        <li class="list_margin"><svg class="mar" xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="mdi3-check" width="24"
+                                height="24" viewBox="0 0 24 24">
+                                <path d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z" /></svg>Early access
+                            to&nbsp;products</li>
+                        <li class="list_margin"><svg class="mar" xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="mdi4-check" width="24"
+                                height="24" viewBox="0 0 24 24">
+                                <path d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z" /></svg>Exclusive
+                            offers
+                            &amp;&nbsp;rewards</li>
+                    </ul>
                 </div>
 
 
