--- a/product.html
+++ b/product.html
@@ -149,8 +149,8 @@
                 <div class="slider_switch_left">
                     <svg class="slider_switch_left_svg" width="13" height="23" viewBox="0 0 13 23" fill="none"
                         xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="M12.6998 3.7499L4.9498 11.4999L12.6998 19.2499L11.1498 22.3499L0.299805 11.4999L11.1498 0.649902L12.6998 3.7499Z">
+                        <path d="M12.6998 3.7499L4.9498 11.4999L12.6998 19.2499L11.1498 22.3499L0.299805
+                             11.4999L11.1498 0.649902L12.6998 3.7499Z" />
                     </svg>
                 </div>
                 <img src="img/slider_img2.png" alt="slider" class="img_slider">
